# data-normalizer

./: .gitignore  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-23-h5vid-exporter.md  2026-06-24-extrinsic-checker.md
docs/superpowers/specs/: 2026-06-23-h5vid-exporter-design.md  2026-06-24-extrinsic-checker-design.md
tools/configs/: a2d.json  a2d_h5_lerobot_map.json
tools/extrinsic-checker/: README.md  conftest.py  extrinsic_check.py  pyproject.toml
tools/extrinsic-checker/configs/: a2d.json
tools/extrinsic-checker/extrinsic_checker/: __init__.py  cli.py  depth_check.py  h5read.py  kinematics.py  loader.py  projection_check.py  report.py
tools/extrinsic-checker/tests/: conftest.py  test_depth_check.py  test_h5read.py  test_kinematics.py  test_loader.py  test_projection_check.py  test_report.py
tools/h5-lerobot-converter/: README.md  conftest.py  h5-lerobot-convert.py
tools/h5-lerobot-converter/h5_lerobot_converter/: convert.py  convert_v3.py  meta_builder.py  meta_builder_v3.py  parquet_writer.py  parquet_writer_v3.py  r1_convert_v3.py  r1_reader.py  reader.py  video_writer.py
tools/h5-lerobot-converter/tests/: conftest.py  test_convert_v3.py  test_integration.py  test_meta_builder.py  test_meta_builder_v3.py  (+6 more)
tools/h5vid-exporter/: README.md  conftest.py  h5vid-export.py  pyproject.toml  run.py
tools/h5vid-exporter/h5vid_exporter/: __init__.py  cli.py  compose.py  exporter.py  reader.py  render.py
tools/h5vid-exporter/tests/: conftest.py  test_cli.py  test_compose.py  test_exporter.py  test_launcher.py  test_reader.py  test_render.py
(+6 files in other folders)
