[project]
name = "data-normalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "yourdfpy>=0.0.60",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
