[project]
name = "h5vid-exporter"
version = "0.1.0"
description = "Render h5 camera image-stream topics into a side-by-side mp4 video."
requires-python = ">=3.10"
dependencies = ["h5py", "numpy", "opencv-python"]

[project.scripts]
h5vid-export = "h5vid_exporter.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["h5vid_exporter"]
